<resources>
    <string name="app_name">Volume</string>
    <string name="beltoon">Beltoon</string>
    <string name="media">Media</string>
    <string name="alarm">Alarm</string>
    <string name="meldingen">Volume voor inkomende oproepen gebruiken voor meldingen</string>
    <string name="melding">Melding</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="stillemodus">Stille modus</string>
    <string name="trillen">Trillen</string>
    <string name="volume">Volume</string>
</resources>